[metadata]
license = MIT
name = pytest-flask
license_files = LICENSE
author = Vital Kudzelka
keywords = pytest, flask, testing
author_email = vital.kudzelka@gmail.com
url = https://github.com/pytest-dev/pytest-flask
long_description = file: README.rst, CHANGELOG.rst, LICENSE
description = A set of py.test fixtures to test Flask applications.
project_urls =
    Source = https://github.com/pytest-dev/pytest-flask
    Issue tracker = https://github.com/pytest-dev/pytest-flask/issues
classifiers=
    Framework :: Pytest
    Environment :: Plugins
    Programming Language :: Python
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Testing
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe = False
python_requires = >= 3.5
setup_requires = setuptools_scm

[options.packages.find]
exclude = docs, tests

[options.entry_points]
pytest11 =
    flask = pytest_flask.plugin

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# E203 = slice notation whitespace, invalid
# E501 = line length, handled by bugbear B950
# E722 = bare except, handled by bugbear B001
# W503 = bin op line break, invalid
# F401 = unused imports, false positives
# F811 = redefinition of variables, flase positives
select = B, E, F, W, B9
ignore =
    E203
    E501
    E722
    W503
    F401
    F811
max-line-length = 80
